fix chatinput overflow

--- a/src/generator/components/ChatPreview/chatpreview.css
+++ b/src/generator/components/ChatPreview/chatpreview.css
@@ -42,6 +42,7 @@
     display: flex;
     height: 50px;
     position: relative;
+    overflow-y: hidden;
 }
 
 .chat-input .left {
